# zfx-michelson

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  package.json  webpack.config.js
.github/workflows/: main.yml
examples/bets/: bet-schema.json  bet-storage.json  bet-storage.mligo  bet.mligo  main.rs
scripts/: json_converter.js
src/: json_converter.js  lib.rs  main.rs  micheline.rs  michelson.rs  michelson_convert.js  michelson_map.rs  michelson_parser.js  michelson_types.rs  package-lock.json
testdata/: decode-input-oneline.json  decode-input.json  encode-input-oneline.json  encode-input.json  input-test-oneline.json  input-test.json
tests/: complex_storage_roundtrip.rs  complex_storage_roundtrip_with_macro.rs  conversion-test.js  conversion_test.rs  michelson-to-decode.json  schema.json  test.rs
tests/mocha/: conversion_tests.spec.js  test_data.js
