[package]
name = "zfx-michelson"
version = "0.1.0"
edition = "2021"
authors = ["zero.fx <contact@zerofxlabs.com>"]
license = "MIT"

[dependencies]
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1", features = ["full", "io-util"] }
include_dir = { version = "0.7.2" }
